# RayTracingWeekend

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  Makefile  README.md  main.cpp
src/: constants.cpp  constants.h
src/math/: color.h  ray.cpp  ray.h  vec.cpp  vec.h
